# toxichempy-docs

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/html/: .buildinfo  .buildinfo.bak  contact.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  subpackages.html  toxichempy.chemoinformatics.html  toxichempy.computational_toxicology.html  toxichempy.data_collection.html  toxichempy.experimental_toxicology.html  toxichempy.html  toxichempy.machine_learning.html  toxichempy.pipeline_framework.html  toxichempy.risk_assessment.html  toxichempy.statistical_analysis.html  toxichempy.utils.html  toxichempy.visualization.html
docs/source/: conf.py  contact.rst  index.rst  modules.rst  toxichempy.chemoinformatics.rst  toxichempy.computational_toxicology.rst  toxichempy.experimental_toxicology.rst  toxichempy.machine_learning.rst  toxichempy.pipeline_framework.rst  toxichempy.risk_assessment.rst  toxichempy.rst  toxichempy.statistical_analysis.rst  toxichempy.utils.rst  toxichempy.visualization.rst
examples/PredictiveAopDevelopment/: aggregated_chemical_disease.csv  aggregated_chemical_gene.csv  aggregated_chemical_phenotype.csv  aggregated_disease_gene.csv  aop copy.py  aop.py  cd_common_gene_list.txt  chemical.txt  chemical_disease.csv  chemical_gene.csv  chemical_phenotype.csv  disease_gene.csv  diseases_chemical_disease.txt  raw_disease_gene_ontology.csv  set_cd_common_gene_list.txt
examples/utils/: data_io_examples.py
tests/: test_toxichempy_structure.py
(+44 files in other folders)
